[package]
name = "rp2040-lilos"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
cortex-m = {version = "0.7.4", features = ["inline-asm"]}
cortex-m-rt = {version = "0.7.1"}
lilos = {version = "1.3.0", features = ["systick"]}
futures = { version = "0.3.21", default-features = false, features = ["async-await"] }
pin-project = "1.1.6"
panic-halt = "0.2.0"
rp2040-boot2 = "0.2.0"
rp2040-pac = {version = "0.3", features = ["rt"]}
